# MakerDB

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  debug_db.py  docker-compose.yml  gh4_plan.md  main.py  pyproject.toml
.github/: CONTRIBUTING.md  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
backend/: manage.py  start.sh
backend/core/: admin.py  models.py  router.py  schemas.py  typesense.py
backend/dashboard/: router.py
backend/inventory/: admin.py  apps.py  models.py  router.py  schemas.py
backend/makerdb/: api.py  asgi.py  settings.py
backend/parts/: admin.py  models.py  router.py  schemas.py
backend/procurement/: router.py  schemas.py
backend/projects/: router.py  schemas.py
backend/search/: router.py
backend/tests/: test_verify.py
data/: companies.json  designators.json
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  SECURITY.md  development_standards.md  frontend_spec_0.md
docs/BRAIN/: bulk_locations_spec.md  parts_crud_plan.md  task.md  walkthrough.md
docs/data/: parts.csv
docs/dev-planning/: django_schema_design.py  implementation_plan.md  next_steps.md
docs/developer/: BACKEND.md  CONTRIBUTING.md  FRONTEND.md  README.md  index.md
docs/research/: 001_Implementation.md  001_SmartSearch.md  045_agent-a74a0de.jsonl  045_agent-ab728c4.jsonl  045_context.md  45_refactor_listview.md
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.config.ts  app.vue
src/core/: models.py
src/inventory/: admin.py  models.py
src/makerdb/: api.py  asgi.py  settings.py  urls.py  wsgi.py
src/parts/: models.py
src/procurement/: admin.py  apps.py  models.py
(+123 files in other folders)
